<resources>
    <string name="app_name">ProductApplication</string>
    <string name="loginPageTitle">LOGIN PAGE</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="password">Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="registertitle">REGISTRATION PAGE</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
