<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/registertitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registertitle"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/addName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="12"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/addEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="12"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/addPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="12"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/addConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="12"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword" />

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_weight="0.5"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register"
                android:onClick="addUser"
                android:backgroundTint="#0DA035"
                />

            <Button
                android:layout_weight="0.5"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:onClick="cancel"
                android:backgroundTint="#EC0E28"
                />
        </LinearLayout>


</LinearLayout>